fixarticle h3 vertival spacing

--- a/themes/c8ydocs/assets/scss/_main-content.scss
+++ b/themes/c8ydocs/assets/scss/_main-content.scss
@@ -114,7 +114,7 @@
     top: 74px;
   }
   .article-list h3{
-    //  padding-top: 104px;
+    padding-top: 104px;
   }
 }
 
